# internal/controllers/file_controller.go
@@ -47,3 +47,37 @@ func (f *FileController) HandleUploadFile(w http.ResponseWriter, r *http.Request
 
 	f.FileUseCase.GenerateUploadLink(w, fileData, login)
 }
+
+// HandleDownloadFile godoc
+// @Summary Скачивание файла
+// @Description Генерирует ссылку для скачивания файла с сервера
+// @Tags files
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Param Authorization header string true "Bearer токен авторизации"
+// @Param label query string true "Метка файла"
+// @Success 200 {object} map[string]string "Успешная генерация ссылки, возвращает URL для скачивания файла"
+// @Failure 400 {object} map[string]string "Ошибка в формате запроса"
+// @Failure 401 {object} map[string]string "Пользователь не авторизован"
+// @Failure 404 {object} map[string]string "Файл не найден"
+// @Failure 500 {object} map[string]string "Внутренняя ошибка сервера"
+// @Router /api/files/download [get]
+func (f *FileController) HandleDownloadFile(w http.ResponseWriter, r *http.Request) {
+	// Получаем метку файла из параметров запроса
+	label := r.URL.Query().Get("label")
+	if label == "" {
+		http.Error(w, "Не указана метка файла", http.StatusBadRequest)
+		return
+	}
+
+	// Получаем логин пользователя из токена
+	login, err := pkg.ExtractLoginFromToken(r.Header.Get("Authorization"))
+	if err != nil {
+		http.Error(w, "Ошибка получения логина: "+err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	// Генерируем ссылку для скачивания
+	f.FileUseCase.GenerateDownloadLink(w, label, login)
+}
